Fixing Grid publish screen issue where UI Sortable table row cell widths would collapse since the sort helper has absolute positioning

--- a/themes/cp_themes/default/css/grid.css
+++ b/themes/cp_themes/default/css/grid.css
@@ -43,6 +43,10 @@ table.grid_field td {
 	vertical-align: top;
 }
 
+table.grid_field tr.ui-sortable-helper td {
+	border-bottom: 1px solid #c9cfd4;
+}
+
 table.grid_field tr {
 	background-color: #fff;
 }
